--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,9 @@
         <!-- Materialize -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+        <!-- Custom -->
+        <script type="text/javascript" src="{{ asset('build/js/main.js') }}"></script>
         {% block javascripts %}
         {% endblock %}
     </body>
