--- a/templates/dashboard/admin/ajax/modals/editContact.html.twig
+++ b/templates/dashboard/admin/ajax/modals/editContact.html.twig
@@ -1,8 +1,9 @@
-<div class="modal-content modalContent" >
-    <h4 class="center-align">Edition du contact : {{ contact.name }} </h4>
+<div class="modal-content" id="modalContent">
+    <div class="row">
+        <h4 class="center-align">Edition du contact : {{ contact.name }} </h4>
 
-    <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="flashMessagesUpdateContact{{ contact.id }}"></div>
+        <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="flashMessagesUpdateContact{{ contact.id }}"></div>
 
-    {{ include('dashboard/admin/ajax/forms/updateContact.html.twig') }}
-
+        {{ include('dashboard/admin/ajax/forms/updateContact.html.twig') }}
+    </div>
 </div>
