--- a/templates/dashboard/admin/dashboard.html.twig
+++ b/templates/dashboard/admin/dashboard.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    {{ include('common/nav.html.twig') }}
+    {{ include('common/navAdmin.html.twig') }}
 
     <div class="row">
         <div class="col xl8 l8 m10 s12 offset-xl2 offset-l2 offset-m1">
