--- a/templates/dashboard/admin/contacts.html.twig
+++ b/templates/dashboard/admin/contacts.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('common/nav.html.twig') }}
+    {{ include('common/navAdmin.html.twig') }}
 
     <div id="genericModal" class="modal">
         <div id="modalContent"></div>
