--- a/templates/dashboard/admin/horseman.html.twig
+++ b/templates/dashboard/admin/horseman.html.twig
@@ -41,15 +41,23 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('common/nav.html.twig') }}
+    {{ include('common/navAdmin.html.twig') }}
 
     <div id="genericModal" class="modal">
         <div id="modalContent"></div>
     </div>
 
-    <div class="row">
-        <h3 class="col xl12 center-align">{{user.completeName}}</h3>
-        <div class="col xl4 offset-xl2">
+    <div class="row container">
+        <div class="col xl12 l12 m12 s12 center-align">
+            <div class="card">
+                <div class="card-content">
+                    <h3>{{user.completeName}}</h3>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col xl5 l5 m12 s12">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Coordonnées</span>
@@ -71,7 +79,22 @@
                     </p>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">
+                        {% transchoice user.horse|length %}
+                            [0,1] Cheval|]1,Inf[ Chevaux
+                        {% endtranschoice %}
+                    </span>
 
+                    {{ include('dashboard/admin/sections/horse.html.twig') }}
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col xl7 l7 m12 s12">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Carte de cours</span>
@@ -89,26 +112,11 @@
                 </div>
             </div>
         </div>
-
-        <div class="col xl4">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title">
-                        {% transchoice user.horse|length %}
-                            [0,1] Cheval|]1,Inf[ Chevaux
-                        {% endtranschoice %}
-                    </span>
-
-                    {{ include('dashboard/admin/sections/horse.html.twig') }}
-
-                </div>
-            </div>
-        </div>
     </div>
 
-    <div class="row">
+    <div class="row container">
 
-        <div class="col xl8 l8 m12 s12 offset-xl2 offset-l2">
+        <div class="col xl12 l12 m12 s12">
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Factures</span>
