--- a/templates/dashboard/admin/ajax/pagination/courseCardHistory.html.twig
+++ b/templates/dashboard/admin/ajax/pagination/courseCardHistory.html.twig
@@ -1,3 +1,4 @@
+{% if paginationCourseCardHistory > 1 %}
 <ul class="pagination center-align" id="paginateCourseCardHistory">
     {% if paginationCourseCardHistory['currentPage'] <= 1 %}
         <li class="disabled"><i class="material-icons">chevron_left</i></li>
@@ -19,3 +20,4 @@
         <li class="waves-effect"><a href="{{ path('paginate-course-card-history',{'currentPage': paginationCourseCardHistory['currentPage']|number_format +1, 'id': user.id }) }}"><i class="material-icons">chevron_right</i></a></li>
     {% endif %}
 </ul>
+{% endif %}
