Mise au propre en vue de la soutenance

--- a/templates/common/informations.html.twig
+++ b/templates/common/informations.html.twig
@@ -27,7 +27,10 @@
 
                     <h3 class="center-align">Vos informations</h3>
                     <div class="divider divider-form"></div>
-                    <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="horsemanForm" data-url="{{ path('reload-horseman-form') }}">
+
+                    <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="flashMessagesUserInformations"></div>
+
+                    <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1">
                         {{form_start(informationsForm)}}
 
                         <div class="row">
@@ -62,7 +65,7 @@
                             </div>
 
                             <div class="input-field col xl12 l12 m12 s12">
-                                {{form_widget(informationsForm.submit, {'attr': {'data-url': path('add-horseman') }})}}
+                                {{form_widget(informationsForm.submit, {'attr': {'data-url': path('update-user-informations') }})}}
                             </div>
 
                             <div class="col xl12 l12 m12 s12">
@@ -83,6 +86,44 @@
 {% endblock %}
 
 {% block javascripts %}
+    <script>
+        // Soumission du formulaire de modification des informations de l'utilisateur
+        function updateInformations() {
+            $('body').on('submit', 'form[name="update_user_informations"]', function (e) {
+                e.preventDefault();
+                $('.progress-user-informations').show();
+                var url = $('#update_user_informations_submit').attr('data-url');
+                var $form = $(this);
+                $.ajax({
+                    type: 'POST',
+                    url: url,
+                    data: $form.serialize(),
+                    success: function (data) {
+                        var success = '<div class="card-panel green accent-4" id="confirmationUpdateInformations">' + data + '</div>';
+
+                        $('#flashMessagesUserInformations').html(success);
+
+                        $('.progress-user-informations').hide();
+
+                        function removeFlashMsg() {
+                            $('#confirmationUpdateInformations').replaceWith('');
+                        }
+                        setTimeout(removeFlashMsg, 5000);
+
+                    },
+                    error: function (jqxhr) {
+                        var error = '<div class="card-panel deep-orange accent-4">' + jqxhr.responseText + '</div>';
+                        $('#flashMessagesUserInformations').html(error);
+                        $('.progress-user-informations').hide();
+                    }
+                })
+            });
+        }
+
+        $(document).ready(function(){
+            updateInformations();
+        });
+    </script>
 {% endblock %}
 
 
