--- a/templates/common/password.html.twig
+++ b/templates/common/password.html.twig
@@ -2,6 +2,15 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('build/css/table.css') }}">
+    <style>
+        .divider-form {
+            margin-bottom: 50px;
+        }
+
+        .progress-user-password {
+            display: none;
+        }
+    </style>
 {% endblock %}
 
 {% block body %}
@@ -16,38 +25,10 @@
 
                         <h3 class="center-align">Votre mot de passe</h3>
                         <div class="divider divider-form"></div>
-                        <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="horsemanForm" data-url="{{ path('reload-horseman-form') }}">
-                            {{form_start(passwordForm)}}
+                        <div class="col xl10 l10 m10 s12 offset-xl1 offset-l1 offset-m1" id="flashMessagesPasswordUser"></div>
 
-                            <div class="row">
-                                <div class="input-field col xl12 l12 m12 s12">
-                                    {{form_widget(passwordForm.oldPassword)}}
-                                    {{form_label(passwordForm.oldPassword)}}
-                                </div>
+                        {{ include('common/forms/changePassword.html.twig') }}
 
-                                <div class="input-field col xl12 l12 m12 s12">
-                                    {{form_widget(passwordForm.newPassword.first)}}
-                                    {{form_label(passwordForm.newPassword.first)}}
-                                </div>
-
-                                <div class="input-field col xl12 l12 m12 s12">
-                                    {{form_widget(passwordForm.newPassword.second)}}
-                                    {{form_label(passwordForm.newPassword.second)}}
-                                </div>
-
-                                <div class="input-field col xl12 l12 m12 s12">
-                                    {{form_widget(passwordForm.submit, {'attr': {'data-url': path('add-horseman') }})}}
-                                </div>
-
-                                <div class="col xl12 l12 m12 s12">
-                                    <div class="progress progress-user-password">
-                                        <div class="indeterminate"></div>
-                                    </div>
-                                </div>
-
-                                {{form_end(passwordForm)}}
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -57,6 +38,56 @@
 {% endblock %}
 
 {% block javascripts %}
+
+    <script>
+        // Soumission du formulaire de modification des informations de l'utilisateur
+        function changePassword() {
+            $('body').on('submit', 'form[name="change_password"]', function (e) {
+                e.preventDefault();
+                $('.progress-user-password').show();
+                var url = $('#change_password_submit').attr('data-url');
+                var $form = $(this);
+                $.ajax({
+                    type: 'POST',
+                    url: url,
+                    data: $form.serialize(),
+                    success: function (data) {
+                        var success = '<div class="card-panel green accent-4" id="confirmationChangePassword">' + data + '</div>';
+
+                        $('#flashMessagesPasswordUser').html(success);
+
+                        $('.progress-user-password').hide();
+
+                        reloadchangePasswordForm();
+                        function removeFlashMsg() {
+                            $('#confirmationChangePassword').replaceWith('');
+                        }
+                        setTimeout(removeFlashMsg, 5000);
+
+                    },
+                    error: function (jqxhr) {
+                        var error = '<div class="card-panel deep-orange accent-4">' + jqxhr.responseText + '</div>';
+                        $('#flashMessagesPasswordUser').html(error);
+                        $('.progress-user-password').hide();
+                    }
+                })
+            });
+        }
+
+        // Rechargement du formulaire d'ajout d'un nouveau contact
+        function reloadchangePasswordForm() {
+            var url = $('#changePasswordForm').attr('data-url');
+            $.ajax({
+                type: 'GET',
+                url: url,
+                success: function (data) {
+                    $('#changePasswordForm').replaceWith(data);
+                }
+            })
+        }
+
+        $(document).ready(function(){
+            changePassword();
+        });
+    </script>
 {% endblock %}
-
-
