--- a/templates/dashboard/admin/horseman.html.twig
+++ b/templates/dashboard/admin/horseman.html.twig
@@ -387,7 +387,7 @@
                     success: function (data) {
                         var success = '<div class="card-panel green accent-4" id="confirmationUpdateBill'+id+'">' + data + '</div>';
 
-                        $('#flashMessagesUpdateBill'+id).html(success);
+                        $('#flashMessagesUpdateBill').html(success);
 
                         $('.progress-update-bill').hide();
 
