--- a/templates/dashboard/user/bills.html.twig
+++ b/templates/dashboard/user/bills.html.twig
@@ -23,6 +23,29 @@
 {% endblock %}
 
 {% block javascripts %}
+    <script>
+        // Fonction de pagination des factures
+        function paginateBills() {
+            $('body').on('click','#paginateBills a', function (e) {
+                e.preventDefault();
+                var $a = $(this);
+                var url = $a.attr('href');
+
+                $.ajax({
+                    type: 'GET',
+                    url: url,
+                    success: function (data) {
+                        $('#table-bills').replaceWith(data);
+                    }, error: function () {
+                    }
+                })
+            });
+        }
+
+        $(document).ready(function(){
+            paginateBills();
+        });
+    </script>
 {% endblock %}
 
 
