--- a/templates/dashboard/user/dashboard.html.twig
+++ b/templates/dashboard/user/dashboard.html.twig
@@ -6,6 +6,15 @@
         .card-notifications {
             padding: 10px !important;
         }
+
+        .horses-title {
+            font-size: 16px;
+            padding: 5px 5px 5px 0;
+        }
+
+        .right {
+            margin-left: 0 !important;
+        }
     </style>
 {% endblock %}
 
@@ -14,18 +23,109 @@
     {{ include('common/navUser.html.twig') }}
 
     <div class="row">
-        <div class="col xl8 l8 m10 s12 offset-xl2 offset-l2 offset-m1">
+        <div class="col xl8 l12 m12 s12 offset-xl2">
             <div class="card">
                 <div class="card-content">
-                    <h3 class="center-align">Notifications</h3>
+                    <h3 class="center-align">Notifications & alertes</h3>
                     <div class="divider"></div>
-                    <div class="card yellow">
-                        <div class="card-content card-notifications">
-                            {% for alert in app.user.alerts %}
-                                <p>{{ alert.alertDescription }} <i class="material-icons right">clear</i></p>
-                            {% endfor %}
-                        </div>
+                    <ul class="collection">
+                        {% for alert in app.user.alerts %}
+                            <li class="collection-item dismissable yellow">{{ alert.alertDescription }}<i class="material-icons right">clear</i></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col xl4 l12 m12 s12 offset-xl2">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">Vos coordonnées</span>
+                    <p>
+                        {{app.user.completeName}}<br>
+
+                        {% if app.user.address == null %}
+                            <i>Adresse non définie</i><br>
+                        {% else %}
+                            {{ app.user.address }}<br>
+                            {{ app.user.zipCode }} {{app.user.country }}<br>
+                        {% endif %}
+
+                        {% if app.user.username == null %}
+                            {{ app.user.username }}
+                        {% else %}
+                            {{app.user.username}} / {{ app.user.phone }}
+                        {% endif %}
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">
+                        {% transchoice app.user.horse|length %}
+                            [0,1] Votre cheval|]1,Inf[ Vos chevaux
+                        {% endtranschoice %}
+                    </span>
+
+                    {% if user.horse|length == 0 %}
+                        <p>Vous n'êtes pas propriétaire d'un cheval.</p>
+                    {% else %}
+                        {% for horse in app.user.horse %}
+                            <p class="horses-title"><b>{{horse.name}}</b></p>
+
+                            <p>
+                                Date de naissance : {{ horse.birthDate ? horse.birthDate|date('d/m/Y') : "Non définie" }}<br>
+
+                                Date de vaccination : {{ horse.vaccinationDate ? horse.vaccinationDate|date('d/m/Y') : "Non définie" }}<br>
+
+                                Date de vermifugation : {{ horse.dewormingDate ? horse.dewormingDate|date('d/m/Y') : "Non définie" }}<br>
+
+                                Gestion couvertures :
+
+                                {% if horse.blanketsOption is same as(false) %}
+                                    Non <br>
+                                {% else %}
+                                    Oui <br>
+                                {% endif %}
+                            </p>
+                        {% endfor %}
+                    {% endif %}
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col xl4 l12 m12 s12">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">Votre carte de cours</span>
+
+                    <div id="courseCardInformations" data-url="{{ path('reload-course-card',{'id': user.id }) }}">
+                        {% if app.user.courseCard == null %}
+                            <p>Vous n'avez pas encore de carte de cours.</p>
+
+                        {% else %}
+
+                            <p>
+                                Cours restant : {{ user.courseCard.remainingCourse }} / {{ user.courseCard.balance }}<br>
+                                Date de validité :
+                                {% if date(app.user.courseCard.validityDate) < date("now") %}
+                                    <span style="color: #B0413E">{{ user.courseCard.validityDate|date('d/m/Y') }}</span>
+                                {% else %}
+                                    {{ app.user.courseCard.validityDate|date('d/m/Y') }}
+                                {% endif %}
+                            </p>
+
+                            <span class="card-title courses-history-title">Historique des décomptes</span>
+
+                            {{ include('dashboard/admin/tables/courseCardHistory.html.twig') }}
+
+                        {% endif %}
                     </div>
+
                 </div>
             </div>
         </div>
@@ -34,6 +134,29 @@
 {% endblock %}
 
 {% block javascripts %}
+    <script>
+        // Fonction de pagination de l'historique
+        function paginateHistory() {
+            $('body').on('click','#paginateCourseCardHistory a', function (e) {
+                e.preventDefault();
+                var $a = $(this);
+                var url = $a.attr('href');
+
+                $.ajax({
+                    type: 'GET',
+                    url: url,
+                    success: function (data) {
+                        $('#table-course-card-history').replaceWith(data);
+                    }, error: function () {
+                    }
+                })
+            });
+        }
+
+        $(document).ready(function(){
+            paginateHistory();
+        });
+    </script>
 {% endblock %}
 
 
